--- a/res/layout/activity_serial_debug.xml
+++ b/res/layout/activity_serial_debug.xml
@@ -6,6 +6,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout_focus"
+        android:orientation="horizontal"
         android:layout_width="0px"
         android:layout_height="0px"
         android:focusable="true"
@@ -116,6 +117,12 @@
                         android:layout_height="wrap_content"
                         android:text="@string/msec" />
                 </LinearLayout>
+                
+                <CheckBox
+                    android:id="@+id/check_save_file"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/save_file" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
@@ -134,8 +141,9 @@
             android:orientation="horizontal"
             android:weightSum="6" >
 
-            <LinearLayout
+            <LinearLayout                
                 android:id="@+id/no_focus"
+                android:orientation="horizontal"
                 android:layout_width="0px"
                 android:layout_height="0px"
                 android:focusable="true"
